--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,22 +1,14 @@
 version: 0.2
 phases:
-  install:
-    commands:
-      # Install all dependencies (including dependencies for running tests)
-      - npm install
-  pre_build:
-    commands:
-      # Discover and run unit tests in the '__tests__' directory
-      - npm run test
-      # Remove all unit tests to reduce the size of the package that will be ultimately uploaded to Lambda
-      - rm -rf ./__tests__
-      # Remove all dependencies not needed for the Lambda deployment package (the packages from devDependencies in package.json)
-      - npm prune --production
   build:
     commands:
-      # Use AWS SAM to package the application by using AWS CloudFormation
-      - aws cloudformation package --template template.yaml --s3-bucket $S3_BUCKET --output-template template-export.yml
-artifacts:
-  type: zip
-  files:
-    - template-export.yml
+      - echo Build started on `date`
+      - echo Entered the build phase ...
+      #Lambda deploy reference
+      #https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-deploying.html
+      #Build spec reference
+      #https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
+      # Package SAM template
+      - sam package --template-file sam_template.yml --s3-bucket sam-app-proj-artifacts --output-template-file packaged.yaml
+      # Deploy packaged SAM template
+      - sam deploy --template-file packaged.yaml --stack-name nodejs-sam-application --capabilities CAPABILITY_IAM
