--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,4 +11,4 @@ phases:
       # Package SAM template
       - sam package --template-file template.yaml --s3-bucket sam-app-proj-artifacts --output-template-file packaged.yaml
       # Deploy packaged SAM template
-      - sam deploy --template-file packaged.yaml --stack-name nodejs-sam-application --capabilities CAPABILITY_IAM
+      - sam deploy --template-file packaged.yaml --stack-name nodejs-sam-application --no-fail-on-empty-changeset --capabilities CAPABILITY_IAM
